--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/img/My project.jpg" type="img/x-icon">
     <title>Nosotros</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/ccs/style.css">
 </head>
 <body class="container">
@@ -35,7 +36,7 @@
 
     <header class="header">
         <div class="headernosotros">
-            <h1 class="tituloHeadernosotros">Conoce un poco mas sobre nosotros</h1>
+            <h1  data-aos="flip-left"  class="tituloHeadernosotros">Conoce un poco mas sobre nosotros</h1>
         </div>
     </header>
 
@@ -94,5 +95,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
