--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/img/My project.jpg" type="img/x-icon">
     <title>Productos</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/ccs/style.css">
 </head>
 <body class="container">
@@ -34,7 +35,7 @@
     </nav>
     <header class="header">
         <div class="headerproductos">
-            <h1 class="tituloHeaderproductos">Productos</h1>
+            <h1 data-aos="flip-left" class="tituloHeaderproductos">Productos</h1>
         </div>
     </header>
 
@@ -94,6 +95,10 @@
 
     </div>
 </footer>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
     
 </body>
 </html>
